--- a/lovt/index.html
+++ b/lovt/index.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOVT - You love, your loft!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <h1 id="logoEscrito">LOVT</h1>
-        <nav>
-            <ul class="navbar">
-                <li>Home</li>
-                <li>Área do Usuário</li>
-                <li>Sobre nós</li>
-                <li>Contato</li>
-            </ul>
-        </nav>
+            <a id="logoEscrito" href="#">LOVT</a>
+            <a class="textoLogo" href="">You love, <span>your loft!</span></a>
+            <nav class="menuDrop">
+                <div>
+                    <span class="drop"></span>
+                    <span class="drop"></span>
+                    <span class="drop"></span>
+                </div>
+                <ul class="navbar">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Área do Usuário</a></li>
+                    <li><a href="#"> Sobre nós</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
     </header>
 
     <main>
         <article>
 
-        <section>Corrossel</section>
+            <section>Corrossel</section>
 
-        <section>2 ofertas</section>
-        
-        <section>
-            <div>Your Style</div>
-            <div>Industrial</div>
-            <div>Modern</div>
-            <div>Classic</div>
-        </section>
+            <section>2 ofertas</section>
+
+            <section>
+                <div>Your Style</div>
+                <div>Industrial</div>
+                <div>Modern</div>
+                <div>Classic</div>
+            </section>
 
         </article>
 
@@ -59,4 +68,5 @@
         </ul>
     </footer>
 </body>
+
 </html>
